--- a/default.css
+++ b/default.css
@@ -11,7 +11,7 @@
 		background-image: url("entrance.jpg");
 		font-family: 'Didact Gothic', sans-serif;
 		font-size: 12pt;
-		font-weight: 200;
+		font-weight: bolder;
 		color: #f8f8f8;
 	}
 	
@@ -336,4 +336,14 @@
 	#welcome a
 	{
 		color: rgba(255,255,255,1);
+	}
+
+	/*************************************************************
+	**************************************************************/
+	.button:hover{
+		background-color: white;
+		color:rgba(0, 0, 0, 0.5);
+	}
+	.big:hover{
+		font-size: xx-large;
 	}
