--- a/main.css
+++ b/main.css
@@ -232,7 +232,8 @@ letter-spacing: 2px;
 line-height: 40px;
 font-size: xx-large;
 }
-#fb-comments{
+#fb{
     position: absolute;
+    left: 0;
     bottom: 0;
 }
